css/style.css
*{
    margin: 0;
    padding: 0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}
@font-face {
    font-family: Playwrite;
    src: url(../fonts/PlaywriteGBS-VariableFont_wght.ttf);
}
body::-webkit-scrollbar{
    display: none;
    margin-top: 20px;
}
.logo{  
    width:50px;
    height: 50px;
    border-radius: 50%;
    border: none;
    background-color: #fff;
    margin: 2px 15px;
}
header div h3{
    font-family: Playwrite;
}
.navbar{
    display: flex;
    list-style: none;
    text-decoration: none;
}
.navbar li{
    margin: 8px;
    font-weight: bold;
    text-decoration: underline;
}
.navbar li a:hover{
    color: orange;
}
.navbar li a{
    color: #fff;
}
header{
    position:fixed;
    width: 100vw;
    z-index: 5;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: rgb(21, 96, 130);
}

header div{
    display: flex;
    justify-content: center;
    align-items: center;
}

.tbtns{
    padding-top: 100px;
    width: 100vw;
    height: 60vh;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    flex-wrap: wrap;
    animation-name: anim;
    animation-duration: 1s;
    animation-iteration-count: 1;
    animation-fill-mode:both;

}
.tbtns a{
    background-color: rgb(11, 48, 65);
    color: white;
    width: 200px;
    padding: 40px;
    border-radius: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
    font-size: larger;

    transition: 0.5s;

}
.tbtns a:hover{
    scale: 1.2;
}
@keyframes anim {
    0%{
        transform: scale(0.1);
    }
    100%{
        transform: scale(1);
    }
}
.basics{
    padding: 68px 20px;
}
.basics h1{
    text-decoration: underline;
    margin-bottom: 20px;
}
.basics h4{
    font-weight:normal;
    margin-left: 40px;
}
.basics h3{
    margin: 20px 0px;
}
.ugex{
    background-color: black;
    color: #fff;
    padding: 20px;
    width: auto;
    border-radius: 5px;
    margin: 20px 0px;
}
.gex{
    background-color: black;
    color: #fff;
    padding: 20px;
    border-radius: 5px;
    width:auto;
}
.ex{
    display: flex;
    justify-content:space-around;
    align-items: center;
    flex-wrap: wrap;
}
.sidebar{
    position: fixed;
    top: 0;
    right: 0;
    height: 100vh;
    width: 250px;
    z-index: 999;
    background-color: rgba(255, 255, 255, 0.308);
    box-shadow: -10 0 10px rgba(0, 0, 0, 0.1);
    display: none;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    backdrop-filter: blur(10px);

}
.sidebar li{
    list-style: none;
    padding: 20px 30px;
    width: 100%;
}
.sidebar li:hover{
    background-color: #f0f0f0;
}
.sidebar li a{
    text-decoration: none;
    width: 100%;
    color: black;
}

table, th ,td{
    border: 1px solid white;
    border-collapse: collapse;
    padding: 5px;
}


@media (max-width: 750px){
    .hideOnMobile{
        display: none;
    }
}
@media(min-width: 750px){
    .hideOnDesktop{
        display: none;
    }
}

